finished first draft of results

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -236,10 +236,19 @@ we find that the changes in ELF10 WBO for remote chemical environment changes ar
 This allows us to use the difference in ELF10 WBO of parent and fragment as a good surrogate to the level of disruption of the chemical environment.
 
 ### A simple fragmentation scheme can use the WBO to preserve the chemical environment around a torsion
+
+![**Illustration of fragmentation scheme using WBOs**
+First, we find the rotatable bonds and calculate their ELF10 WBOs. Then, for each rotatable bond, we find the minimal fragment as described in the text. Then
+we calculate WBOs for the bonds around which the minimal fragments were generated and check if the new WBO is within the distruption threshold relative to
+the parent's WBO. If the absolute difference is greater than the disruption threshold, substituents are added, one at a time, and the WBO is recalculated.
+The fragment continues to grow until the central bond's WBO is within the disruption threshold of the WBO of the bond in the
+parent molecule](images/fragmentation_scheme_illustration.svg){#fig:frag_scheme}
+
+
 The WBO is a robust indicator of changes in torsion energy barrier heights for related torsions. Therefore, if a fragment's
 WBO changes too much from its parent WBO at the same bond, the fragmentation is probably inadequate. Using this concept,
 we extended the fragment-and-cap scheme (with slight changes) proposed by [@doi:10.1021/acs.jcim.9b00373] by considering resonance via WBOs. The scheme, illustrated
-in figure 8 is as follows:
+in figure @fig:frag_scheme is as follows:
 
 1. Find acyclic bond. For this step we use the SMARTS pattern `[!$(*#*)&!D1]-,=;!@[!$(*#*)&!D1]`.
 2. Keep the four atoms in the torsion quartet and all atoms bonded to those atoms (this ensures that all 1-5 atoms are included in the minimal fragment).
