--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -82,7 +82,7 @@ the resonance structure where the double bond is on (24, 23) with the negative c
 so there is less electron population overlap in out of plane conformation.](images/figure-4.svg){#fig:wbo_var_corr}
 
 To investigate how WBOs change with conformation, we used Omega [@doi:10.1021/ci100031x] to generate
-conformers for a set of kinase inhibitors [hold for SI] and calculated the Lowdin-Wiberg bond order for each conformation from a
+conformers for a set of kinase inhibitors `[hold for SI]`{.red} and calculated the Lowdin-Wiberg bond order for each conformation from a
 B3LYP-D3(BJ) / DZVP [@doi:10.1139/v92-079; @doi:10.1063/1.464913; @doi:10.1063/1.3382344; @doi:10.1002/jcc.21759] geometry optimized calculation
 using Psi4 [@doi:10.1021/acs.jctc.7b00174]. Omega is a knowledge-based
 conformer generator that uses a modified version of MMFF94s [@doi:10/brxdg7] to score conformations. It has been shown to accurately reproduce experimentally
@@ -98,14 +98,14 @@ with their neighboring ring systems, however, While the distribution of WBOs for
 with the resonance structures shown in figure @fig:wbo_var_corr. The resonance strictures that have the double bond on the bond closer to
 the quinazoline (bond 19-23) are more stable because the negative charge is on a nitrogen. When the double bond is on the neighboring
 23-24 bond, the negative charge is on an aromatic carbon which is less stable. The results are similar for other kinase inhibitors
-tested shown in [hold for SI]. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
+tested shown in `[hold for SI]`{.red}. In addition, when we inspected the conformations associated with the highest and lowest WBO in the grey distribution (fig @fig:wbo_var_corr, E)
 we found that conformations with lowest WBO on bond 19-23 had that bond out of plane while the conformation with the highest WBO value
 had the bond in plane which allows conjugation. We found similar results from WBOs calculated form QC torsion scans. Fig @fig:sub_phenyl_qc_scan shows Lowdin-Wiberg
 bond order for each point in the QC corresponding torsion scans. The WBOs are anti-correlated with the torsion potential energy
 which is in line with chemical intuition. Conjugation stabilizes conformations and leads to more electronic population overlap in bonds [@doi:10.1351/pac198961040635].
 At higher energy conformers, the aromatic rings are out of plan and cannot conjugate. Therefore the WBO is lower for those conformers. At lower energy
 conformations, the rings are in plane and can conjugate so the WBO is higher. We found that the trends discusses above are similar when using semi-empirical methods
-such as AM1 and HF3C (hold for SI)
+such as AM1 and HF3C `(hold for SI)`{.red}
 
 #### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
 We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling.
@@ -118,7 +118,7 @@ in the methoxy groups (atoms 1-3 and 8-10) are correlated with each other and al
 And the bonds between the chloro fluoro phenyl and quinazoline follow the same trend as their WBO distribution and resonance structures.
 The bond closer to the quinazoline (bond 23-19) has WBO distribution correlated with the quinazoline while the bond closer to the
 chloro fluoro phenyl (bond 23-24) is not as strongly coupled with the quinazoline. The trends are similar
-for other kinase inhibitors tested as shown in (hold for SI).
+for other kinase inhibitors tested as shown in `(hold for SI)`{.red}.
 
 #### ELF10 provides a useful way to capture informative conformation-independent WBOs
 
@@ -149,7 +149,7 @@ nitriles. The pink distribution include bonds that have oxygens. The peak at two
 
 This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
 we calculated $W_{AB}$ from ELF10 AM1 calculations
-for all bonds in a set of molecules shown in [hold for SI]. The distribution in figure @fig:wbo_dists corresponds
+for all bonds in a set of molecules shown in `[hold for SI]`{.red}. The distribution in figure @fig:wbo_dists corresponds
 closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The peak at 1.0
 corresponds to C-H and C-C bonds, the peak close to 1.5 corresponds to bonds in aromatic rings, the peak close to 2.0 corresponds
 to double bonds, and finally the triple bonds form the last peak. Figures @fig:wbo_dists B and D seperate out different kinds of bonds
@@ -209,11 +209,11 @@ carboxyilic acid **[E]** Selected QC torsion scan barrier heights vs ELF10 AM1 W
 Table: slope and associated statistics for torsion barrier height vs WBO for selected functional groups {#tbl:stats}
 
 To investigate how these long range effects observed in the WBOs capture changes in the bonds' torsion potential energy, we ran representative QC torsion
-scans for 17 of the functional groups (hold for SI). We did not run QC torsion scans for functional groups that either did not have a torsion such
+scans for 17 of the functional groups `(hold for SI)`{.red}. We did not run QC torsion scans for functional groups that either did not have a torsion such
 as halogens, were congested such as trimethyl amonium and functional groups where the WBOs did not change by more than 0.01 for different functional
 groups at the meta or para position such as methyl. We chose the representative molecules for the 17 functional groups by sorting them
-by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in supplementary
-figure 4. We show a representative series of torsion scan for the nitro functional group in figure {@fig:sub_phenyl_qc_scan}A. The torsion energy barrier height
+by their WBO and selecting molecules with minimum WBO difference of 0.02. All of the resulting QC torsion scans are shown in `[hold for SI]`{.red}.
+We show a representative series of torsion scan for the nitro functional group in figure {@fig:sub_phenyl_qc_scan}A. The torsion energy barrier height
 increase with increasing ELF10 WBO of the bond. In addition, {@fig:sub_phenyl_qc_scan}B  shows that the Wiberg-Lowdin bond orders are anti-correlated with
 the QC torsion scan which is the same result we saw for the initial bipheynl set discussed in the previous section. We also found that the linear
 relationshipt between WBOs and torsion energy barrier height
@@ -226,7 +226,7 @@ associated statistics for the fitted lines.
 anti correlated with QC torsion scans **[C]** QC scans for urea in a series of different chemical environment. Both profiles and
 energy barriers change with ELF10 AM1 WBOs **[D]** Löwdin-Wiberg bond orders are not perfectly anti correlated to QC scans](images/figure_7.svg){#fig:sub_phenyl_qc_scan}
 
-For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. [hold for SI].
+For most functional groups, the change in WBOs correspond to changes in torsion barrier heights. `[hold for SI]`{.red}.
 However, for some functional groups, the change in WBO does not fully capture the differences in torsion scans because not only do the torsion energy
 barrier heights increase, but the profile changes considerably as shown in {@fig:sub_phenyl_qc_scan}C for urea. Interestingly, the Löwdin-Wiberg
 bond order scans do have the same profiles {@fig:sub_phenyl_qc_scan} D.
@@ -299,10 +299,10 @@ on 2019-06-06) with the following criteria:
 4. Molecule must have at least one aromatic ring
 5. Molecule has only one connnected component
 
-This left us with 730 small molecules [Supplementary figure 3]. Charged molecules exacerbates remote substituent sensitivity and many
+This left us with 730 small molecules `[hold for SI]`{.red}. Charged molecules exacerbates remote substituent sensitivity and many
 molecules are in charged states at physiological pH. To ensure that our dataset is representative of drugs at physiological pH, we used
 the OpenEye `EnumerateReasonableTautomers` to generate tautomers that are highly populated at pH ~7.4. This tautomer enumeration
-extended the set to 1234 small molecules [Supplementary figure 3B]
+extended the set to 1234 small molecules `[hold for SI]`{.red}
 We then generated all possible fragments of these molecules by using a combinatorial fragmentation scheme. In this scheme, every rotatable
 bond is fragmented and then all possible connected fragments are generated where the smallest fragment has 4 heavy atoms and the largest
 fragment is the parent molecule. This scheme generated ~300,000 fragments.
@@ -418,7 +418,7 @@ When the threshold is low, the fragmenation scheme will generate fragments which
 for computational efficient QC torsion scan. On the other hand, when the disruption threshold is too low, the scheme generates
 fragments that are small but the distance scores are too big. For the molecules we tested, a threshold of 0.03 leads to the most fragments
 in the lower left quadrant (defined as cost < 10000 and score < 0.05) as shown in table @tbl:benchmark. This threshold is similar to what we found when we looked at the distribution of standard deviations for
-WBO distributions with respect to conformations [figure 5 blue distribution]. Most of them fall under 0.02. Both of these data points
+WBO distributions with respect to conformations (@fig:standard_deviations, blue). Most of them fall under 0.03. Both of these data points
 leads us to recommend a distruption threshold of 0.03 for our fragmentation scheme. While the current scheme does not provide a perfect solution,
 plots in figure {@fig:joint_plots} shows less fragments outside of the lower left region for thresholds 0.01, 0.03 and 0.05. This scheme  preforms better than other schemes such as the
 scheme Pfizer used in [@doi:10.1021/acs.jcim.9b00373](figure {@fig:joint_plots}, lower right and table @tbl:benchmark).
