--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -28,7 +28,7 @@ for larger molecules and/or higher dimensional QC torsion profiles. QC calculati
 of heavy atoms $N$, like $O(N^M)$ where $M\leq 3$ for ab initio QC methods [CITE]. To adequately fit the torsions, 
 constrained geometry optimizations need to be calculated at $\leq 15^0$ intervals for a minimum of 24 constrained 
 geometry optimizations. To avoid hysteresis in the energy profile due to orthogonal degrees of freedom [@doi:10.1021/acs.jpcb.7b02320],
-methods like wavefront propagation [CITE] are used. This adds a factor of 2D, where D is the dimension of the QC scan, 
+methods like wavefront propagation [hold for CITE] are used. This adds a factor of 2D, where D is the dimension of the QC scan,
 to the computational cost. Figure 1A illustrates the average CPU time of a torsion scan for an average drug-like molecules. The shaded
 histogram is the distribution of the number of heavy atoms in FDA approved small molecules taken from DrugBank [@doi:10.1093/nar/gkx1037]. 
 The average molecules size is [N] heavy atom which corresponds to an average of [t] CPU seconds per energy and gradient evaluation at B3LYP-D3(BJ)/DZVP 
