started working on discussion

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -13,10 +13,12 @@ The profile changes qualitatively as well. For the neutral molecule, the lowest 
 is slighlty out of plane, at $150^{\circ}$ and $120^{\circ}$.  For the zwitterion, the lowest energy 
 conformer is at $180^{\circ}$. In the neutral molecule, the slightly out of plane conformer is preferred to accommodate
 the hydrogens. However, the central bond in the zwitterion is part of the larger conjugated system between the two aromatic
-rings (@fig:biphenyls B) so the planar conformer is preferred to enable conjugation. This trend poses several problems to
+rings (@fig:biphenyls B) so the planar conformer is preferred to enable conjugation.
+
+This trend poses several problems to
 automatic forcefield parametrization. Most forcefields consider the central bond
 in the zwitterion rotatable which is reflected in the same torsion parameters for all four molecules (@fig:biphenyls, D)
-while the QC scan clearly shows that is it not. This illustrates one
+while the QC scan clearly shows that it is not. This illustrates one
 of the fundamental limits of atom types in classical forcefields. At what point in this series should
 a new atom type be introduced? The Open Force Field Initiative's effort on automating data driven direct
 chemical perception [@doi:10.1021/acs.jctc.8b00640 ;@doi:10.1021/acs.jctc.8b00821; @doi:10.26434/chemrxiv.8304578.v1]
@@ -46,7 +48,7 @@ occupied atomic orbitals on atoms A and B
 \begin{equation} W_{AB} = \sum_{\mu\in A}\sum_{\nu\in B} P^2_{\mu\nu} \end{equation}
 
 The Wiberg bond order assumes atomic orbitals (AOs) are orthonormal. In ab initio calculations, however, AOs are not
-orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] which is how it is calculated in Psi4.
+orthogonal but the WBO can be calculated via Löwdin normalization [@doi:10.1063/1.1747632; @doi:10/bdfk5f] which is how it is calculated in Psi4 [@doi:10.1021/acs.jctc.7b00174].
 
 We calculated the WBO from AM1 calculations for the biphenyl series as shown in figure @fig:biphenyls A. The increase in the WBO corresponds
 to increasing conjugation and torsion energy barrier height of the bond. When the torsion energy barrier heights are plotted against
@@ -290,7 +292,7 @@ This fragmentation scheme improves upon [@doi:10.1021/acs.jcim.9b00373], however
 thresholds and different fragmentation schemes in general, we generated a diverse set of FDA-approved drug molecules that can be
 a useful validation set. The goal of this set was to find molecules that are challenging to fragment. In other words, molecules
 that have bonds that are sensitive to remote substituent changes. To find these molecules, we first filtered DrugBank (version 5.1.3 downloaded
-on 2019-06-06) with the following criteria:
+on 2019-06-06) [@doi:10.1093/nar/gkx1037] with the following criteria:
 
 1. FDA approved small molecules
 2. Largest ring size has less than 14 heavy atoms
@@ -320,7 +322,7 @@ cheapest fragment with the best score at that size. The selected fragment should
 lower left corner. **[C]** Selected fragments. Bonds are highlighted with their distance score. The ELF10 WBO is shown
 in the boxes above the highlighted bonds.](images/figure_9.svg){#fig:dabrafenib_wbo_dists}
 
-Figure {@fig:dabrafenib_wbo_dists} shows an example of the results of combinatorial
+Figure {@fig:dabrafenib_wbo_dists} shows an example of the results of exhaustive
 fragmentation and how this data can be used to benchmark fragmentation schemes. All rotatable bonds in the parent molecule, Dabrafenib ({@fig:dabrafenib_wbo_dists}C 4)
 were fragmented into 11 fragments (in this example, the trimethyl was not fragmented) resulting in 108 connected fragments when all connected combinations were generated.
 Of those 108 fragments, 44 fragments contained the bond between the sulfur in the sulfonamide and phenyl ring highlighted in fragments in {@fig:dabrafenib_wbo_dists}C.
