added some more discussion subsections

--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -3,7 +3,7 @@
 ### Combinatorial fragmentation benchmark set contains rich, chemical information that can be useful for other applications
 
 The validation set used to benchmark our fragmentation scheme, and determine the disruption threshold to use, was specifically
-chosen to validate a fragmentation scheme for QC torsion scan so we wanted molecules that are challenging to fragment.
+selected to validate a fragmentation scheme for QC torsion scan so we wanted molecules that are challenging to fragment.
 Therefor, the hundred molecules chosen include bonds that are sensitive to remote
 chemical changes and the functional groups they are sensitive to exhibited relatively large, long range effects. However, these molecules
 were filtered out from a larger set with a total of 1,234 molecules and ~300,000 fragments with their WBO distributions over conformations.
@@ -18,6 +18,13 @@ and tertiary amines. The changes seem to pick up on subtle pKa changes for diffe
 shifts in the distributions observed in figure @fig:dabrafenib_wbo_dists are also picking up on the effects of fluorine on sulfinamide.
 `should I add more figures on the kind of things I saw? SI?`{.orange}
 
+This kind of data can potentially be used to complement knowledge based molecular similarity applications which are usually
+defined locally and might not detect long range effects. In addition, since WBO is anti-correlated with Hammett resonance parameters (fig @fig:subsituted_phenyls C and D),
+and shifts in distributions also seem to detect pKa shifts, WBOs may be useful in improving pKa predictions.
+
+We are sharing the dataset as a benchmark set for future fragmentation schemes. It is also straight forward to generate such data for molecules
+that are not in the set by following the directions given in the detailed methods.
+
 ### Bond orders can be used to fit force field parameters
 
 WBO is one form of quantum mechanical electron density based bond order calculations, among many other definitions of bond orders (Pauling [@doi:10.1021/ja01315a105],
@@ -29,20 +36,20 @@ natural localized molecular orbital bond order [@doi:10.1021/ja00160a022], deloc
 [@doi:10.1016/j.cplett.2003.11.048]) that aim to quantify the chemical bond, a key concept in chemistry, by computing the electron population overlap between atoms. These quantities
 attempt to provide a link between the physical understanding of molecules, a system of individual particles without explicit bonds, to the powerful, mental, graphical, models
 that chemists employ when thinking about molecules. Given that these quantities try to make that connection, it is not surprising that fractional bond orders
-captures important, chemical properties that can be useful in many applications. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
-MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r], a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length and force constants and twofold torsional
-force constants. Given the relationship we find in figure @fig:subsituted_phenyls, E, we should be able to interpolate torsion force constants by calculating
-the WBO, thus avoiding running expensive QC torsion scans. This functionality already exists in the Open Forcefield toolkit [@url:https://github.com/openforcefield/openforcefield].
+captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
+MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional
+force constants. Given the relationship we find in figure @fig:subsituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
+the WBO, thus avoiding running expensive QC torsion scans. It is now possible to calculate WBOs and EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
 The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:subsituted_phenyls, E, the lines
 seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
 these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
-many expensive QC torsion scnas, specifically for bespoke parameter fitting for new chemical entities.
-
-### Using WBO for molecular similarity
+many expensive QC torsion scnas, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
 
 ### Using WBO and the other method by Moitessier et al to avoid needing to calculate expensive QM torsion scans entirely.
 
 ### Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
+
+
 * Asymmetric scans
 * Profile changes
     * Profile in energy changes but not in wbo in same scan
@@ -50,7 +57,19 @@ many expensive QC torsion scnas, specifically for bespoke parameter fitting for 
 ### Why use AM1 WBO if cheaper rule based conjugation criteria exist
 
 ### Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
-    * But still, WBO calculations and the recursion can be expensive. Using this data we can derive simple rules that take into account the sensitive bonds and the chemical groups that must remain
-    * In addition, since the data is rich and picks up on these subtle changes, it can be possible to train an ML model to fragment molecules
 
-###
+Relative changes in bond orders between the fragments and their parent molecules, are a good indication of disruption of electron density
+around a central bond. QC torsion scans capture both steric and conjugation effects so torsion force field parameters should capture
+both short range non bonded corrections and conjugation. However, simple fragmentation rules assumes that including 1-5 atoms around the central
+bond (including rings and functional groups) is enough to capture conjugation effects in addition to sterics. While this assumption holds
+true for many molecules, it is not sufficient for sensitive bonds and functional groups that have long range effects, as we have shown.
+Therefor, using the WBO to detect changes to a bond's chemical environment, which is sensitive to nonlocal effects, ameliorates some deficiencies
+in rule based fragmentation schemes. But there is a trade off and the solution is not always optimal. While WBO calculations are cheap relative to QC torsion scans, they still
+require several semi-empirical QM calculations, the ELF10 estimate is sometimes not an adequate estimate, and heuristics used to
+add substituents to minimize electron density disruption do not always find the optimal path.
+
+The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg Löwdin bond orders for all conformations. Given the
+sheer number of data available on QCArchive, and the long range information WBOs captures, it will be possible to train an
+ML moldel to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
+the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmeting and also potentially
+find the most optimal fragment that minimizes both electronic density disruption and fragment size.
