added discussion subsection on QC scan profile changes

--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -49,10 +49,46 @@ many expensive QC torsion scnas, specifically for bespoke parameter fitting for 
 
 ### Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
+The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
+conjugation and therefor a surrogate for torsion barrier heights (fig @fig:subsituted_phenyls, E). However, as we have shown in
+figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
+environments only capture change of scale in torsion scans, not changes in the profile or where the minima and maxima are.
+There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
+One, symmetry around zero is lost, either with the minima and maxima shifting, or when one maxima is higher than the
+corresponding maxima across the symmetry line at zero degrees [Hold for SI]. In these cases, corresponding WBO scans have the same features
+as the QC scans. This indicates that the changes in the profiles correspond to electronic changes in the different torsions.
+All scans that exhibit these kind of changes have torsions types that include trivalent nitrogen which can be either in
+planar or pyrmidal conformations. When we measured the improper angle of the nitrogen involved in the torsion scan, along the scan,
+we found that the scans that were shifted relative to most other scans in the series, had improper angles that were pyrmidal
+throughout the scan. The other molecules in the series all had improper angles that became planar at lower energies to allow
+conjugation [Hold for SI]. A trivalent nitrogen will be pyramidal if the lone pair is not conjugated, and the scans that
+have improper angles along the entire QC scan all fall on the lower end of WBOs within the series which indicates that the
+lone pairs are not conjugated with the phenyl ring. Another interesting observation is that in most cases where the nitrogen
+is pyramidal throughout the scan, its chirality stays the same, however, for the scans where the relative barrier heights
+are not symmetric, the chirality of the nitrogen flips during the scan [Hold for SI].
 
-* Asymmetric scans
-* Profile changes
-    * Profile in energy changes but not in wbo in same scan
+Another way QC torsion scan profiles can change besides scale, are when the
+the relative heights of the minimas or maximas are different or new minima or maxima are observed. Urea in figure
+@fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~s [hold for SI]
+exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
+other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
+Furthermore, when their corresponding improper angles (when relevant) were measured, we found that all of them become planar
+at low energy which imply that all molecules in the series are conjugated along the phenyl ring and X~1~. Here, steric interactions
+cause the changes in QC profiles. In all scans where one minima relative to the other minima in the scan is higher, and this is not
+the case for other scans in the series, a bulky group is at the meta position, while the other scans have X~_2~ at para positions.
+In addition, for other scans where the profiles do not change as much and X~_1~ is not as bulky, but the barrier heights are out of order of increasing ELF10 WBO (a lower
+ELF10 WBO has a higher torsion energy barrier than another molecule with a higher ELF10 WBO in the series), X~_2~ is at the
+meta position.
+
+The torsion parameters in forcefields are supposed to model both conjugation, a quantum chemical phenomenon that is not well modeled
+in classical forcefields, and corrections for 1-4 nonbonded interactions. To increase transferability of torsion parameters, torsion parameters
+should not include non bonded interactions beyond the 1-4 atoms. However, in general, it is difficult to separate the contributions
+of sterics and conjugation in a QC torsion scan. Here, it seems like the WBO scans along torsion scans, and relative ELF10 WBOs can
+provide a way to separate these contributions. If a torsion profile changes relative to another torsion profile of the same torsion type,
+and their WBO scans along the torsion profile only change in scale,
+or if their relative barrier heights are not in the same order as their ELF10 WBO estimate, the changes are probably coming from nonbonded
+interactions beyond the 1-4 atoms. However, if changes in QC torsion scans of the same torsion types are accompanied with the same profile changes in
+the corresponding WBO scan, then the profile change is inherent to the electron population overlap of the bond and might need a different torsion type.
 
 ### Why use AM1 WBO if cheaper rule based conjugation criteria exist
 
