--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -39,20 +39,19 @@ that chemists employ when thinking about molecules. Given that these quantities 
 captures important, chemical properties that can be useful in many applications, specifically force field parameterization. Indeed, In the MMP2 [@doi:10.1002/jcc.540080504],
 MM3 [@doi:10.1002/jcc.540110709] and MM4 [@doi:10/ftx79r] force fields, a Variable Electronegativity SCF derived bond order for pi-systems was used to fit bond length, bond force constants and twofold torsional
 force constants. Given the relationship we find in figure @fig:subsituted_phenyls, E, we should be able to extrapolate or interpolate torsion force constants by calculating
-the WBO, thus avoiding running expensive QC torsion scans. It is now possible to calculate WBOs and EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
+the WBO, thus avoiding running expensive QC torsion scans. The WBO comes free with an AM1-BCC [@doi:10.1002/jcc.10128] charging calculation at no extra cost, and is also now possible to calculate
+EHT electronic populations with the OFF toolkit [@url:https://github.com/openforcefield/openforcefield].
 The SMIRNOFF format provides a convenient way to add appropriate torsion terms given the data we have. For example, In figure @fig:subsituted_phenyls, E, the lines
 seem to cluster into three clusters, so we can us ChemPer [@doi:10.26434/chemrxiv.8304578.v1] to generate SMIRKS patterns to capture the chemistries in
 these clusters and interpolate the torsion force constants for the different chemical environments of those patterns. This has the potential to avoid
-many expensive QC torsion scnas, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
-
-### Using WBO and the other method by Moitessier et al to avoid needing to calculate expensive QM torsion scans entirely.
+many expensive QC torsion scans, specifically for bespoke parameter fitting for new chemical entities, and improve torsion parameters by including long range effects.
 
 ### Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
 conjugation and therefor a surrogate for torsion barrier heights (fig @fig:subsituted_phenyls, E). However, as we have shown in
 figure @fig:sub_phenyl_qc_scan and [Hold for SI], relative changes in WBO for the same torsion type in different chemical
-environments only capture change of scale in torsion scans, not changes in the profile or where the minima and maxima are.
+environments only capture change of scale in torsion scans, not changes in the profile (relative amplitutes,  periodicities and location of minima and maxima).
 There are several ways a torsion scan of the same torsion type in different chemical environments can change besides scale.
 One, symmetry around zero is lost, either with the minima and maxima shifting, or when one maxima is higher than the
 corresponding maxima across the symmetry line at zero degrees [Hold for SI]. In these cases, corresponding WBO scans have the same features
@@ -90,8 +89,6 @@ or if their relative barrier heights are not in the same order as their ELF10 WB
 interactions beyond the 1-4 atoms. However, if changes in QC torsion scans of the same torsion types are accompanied with the same profile changes in
 the corresponding WBO scan, then the profile change is inherent to the electron population overlap of the bond and might need a different torsion type.
 
-### Why use AM1 WBO if cheaper rule based conjugation criteria exist
-
 ### Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
 
 Relative changes in bond orders between the fragments and their parent molecules, are a good indication of disruption of electron density
@@ -100,12 +97,24 @@ both short range non bonded corrections and conjugation. However, simple fragmen
 bond (including rings and functional groups) is enough to capture conjugation effects in addition to sterics. While this assumption holds
 true for many molecules, it is not sufficient for sensitive bonds and functional groups that have long range effects, as we have shown.
 Therefor, using the WBO to detect changes to a bond's chemical environment, which is sensitive to nonlocal effects, ameliorates some deficiencies
-in rule based fragmentation schemes. But there is a trade off and the solution is not always optimal. While WBO calculations are cheap relative to QC torsion scans, they still
-require several semi-empirical QM calculations, the ELF10 estimate is sometimes not an adequate estimate, and heuristics used to
-add substituents to minimize electron density disruption do not always find the optimal path.
+in rule based fragmentation schemes. But there is a trade off and the solution is not always optimal. While WBO calculations are
+cheap relative to QC torsion scans, they still require several semi-empirical QM calculations, the ELF10 estimate is sometimes
+not an adequate estimate, and heuristics used to add substituents to minimize electron density disruption do not always find the optimal path.
 
+One way to speed up conjugation perception, is using RDKit's conjugation detector which relies on rules. However,
+these rules are binary; a bond is either considered fully conjugated or not. However, Conjugation is a continuous property and
+the extent of conjugation determines relative barrier heights. Boolean values do not allow us to detect such relative changes
+to a bond's chemical environment that will effect torsion barrier height. A better approach is to extend the concept of
+H-TEQ (hyperconjugation for torsional energy quantification) developed in
+[@doi:10.1021/acs.jcim.7b00645, @doi:10.1021/acs.jcim.9b00585; @doi:10.1021/acs.jcim.9b00581] to include not just the 1-4 atoms in
+bonds adjacent to conjugated systems, or aromatic rings in biaryls, but other atoms in the molecule to obtain V~1~ and V~2~ estimates,
+and use those values instead of WBOs to determine the disruption of electron population overlap around the bond.
+
+However, both of the above solutions, while reducing the cost of extent of conjugation detection, will still rely on needing
+to find the optimal path to grow our the fragment. A data-driven approach, which can find the optimal fragment is the ideal solution.
 The OFF QC datasets on QCArchive [@url:https://qcarchive.molssi.org/] all include Wiberg Löwdin bond orders for all conformations. Given the
 sheer number of data available on QCArchive, and the long range information WBOs captures, it will be possible to train an
 ML moldel to find which parts of a molecule are electronically couped and need to be conserved when fragmenting to reproduce
 the parent molecule chemical environment. This data-driven approach will reduce the cost of fragmeting and also potentially
-find the most optimal fragment that minimizes both electronic density disruption and fragment size.
+find the most optimal fragment that minimizes both electronic density disruption and fragment size. It can also provide data
+needed to determine how many torsion SMIRKS types are needed for maximum transferability and chemical coverage.
