--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -68,7 +68,7 @@ are not symmetric, the chirality of the nitrogen flips during the scan [Hold for
 
 Another way QC torsion scan profiles can change besides scale, are when the
 the relative heights of the minimas or maximas are different or new minima or maxima are observed. Urea in figure
-@fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~s [hold for SI]
+@fig:sub_phenyl_qc_scan, C and in [hold for SI] is an extreme example of this kind of change, but other series with bulkier X~_1~ [hold for SI]
 exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
 other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
 Furthermore, when their corresponding improper angles (when relevant) were measured, we found that all of them become planar
