--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -72,7 +72,7 @@ the relative heights of the minimas or maximas are different or new minima or ma
 exhibit similar changes. In these cases, the correspond WBO scans do not have these features, but have similar profiles to
 other WBO scans in the series. This indicates that the observed changes in the profiles do not implicate changes in conjugation.
 Furthermore, when their corresponding improper angles (when relevant) were measured, we found that all of them become planar
-at low energy which imply that all molecules in the series are conjugated along the phenyl ring and X~1~. Here, steric interactions
+at low energy which imply that all molecules in the series are conjugated along the phenyl ring and X~_1~. Here, steric interactions
 cause the changes in QC profiles. In all scans where one minima relative to the other minima in the scan is higher, and this is not
 the case for other scans in the series, a bulky group is at the meta position, while the other scans have X~_2~ at para positions.
 In addition, for other scans where the profiles do not change as much and X~_1~ is not as bulky, but the barrier heights are out of order of increasing ELF10 WBO (a lower
