--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -56,10 +56,13 @@ are incorporated in the fitting procedure. We also need a systematic way to dete
 the barrier to rotation significantly for the central bond of interest.
 
 In this work, we use the Wiberg Bond Order (WBO) [@doi:10/fvwkkh], which is both simple to calculate
-from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs are correlated with bond
+from semi-empirical QC methods and is sensitive to the chemical environment around a bond. WBOs quantify electron population
+overlap between bonds, or the degree of binding between atoms. WBOs are correlated with bond
 vibrational frequencies [@doi:10.1021/jp4010345, @doi:10.1351/pac198961040635] and is used to predict trigger bonds in high energy-density material
-because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Here, we develop an approach 
-that uses the WBO to validate whether a fragmentation scheme corrupts the local chemical environment of interest,
+because it is correlated with the strength of the bond [@doi:10.1002/cphc.201500773]. Wei, et. al. [@doi:10.1021/acs.jcim.9b00585] have shown
+that simple rules for electron richness of aromatic systems in biaryls are good indication of torsion force constants (specifically for V~2~), however, this
+measure was only developed for biaryls and it does not take into account substituents beyond the aromatic ring directly adjacent to the bond.
+Here, we develop an approach that uses the WBO to validate whether a fragmentation scheme corrupts the local chemical environment of interest,
 with a particular focus on fragmentation schemes suitable for QC torsion drives. Our approach uses simple 
 heuristics to arrive at a minimal fragment for QM torsion scan that is representative of of the torsion scan of the 
 substructure in the parent molecules. For a central bond, include all atoms that are involved in the sterics 
