--- a/content/03.theory-and-definitions.md
+++ b/content/03.theory-and-definitions.md
@@ -3,4 +3,5 @@
 [TBD]{.banner .lightyellow}
 
 - Define problem mathematically 
-- Define the problem physically 
+- Define the problem physically
+- Define conjugation and hyperconjugation (most systems here are hyperconjugation)
