--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -110,7 +110,8 @@ conformations, the rings are in plane and can conjugate so the WBO is higher. We
 such as AM1 and HF3C `(hold for SI)`{.red}
 
 #### Bonds in conjugated systems have highly correlated conformation-dependent WBOs
-We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling.
+We found that certain bond orders are strongly correlated or anti-correlated with each other, indicating strong electronic coupling. As bonds in
+one conformation gain electron population overlap, the coupled bonds will decrease in electron population overlap and vice versa.
 Figure @fig:wbo_var_corr C shows the Pearson correlation coefficient for each bond WBO distribution against all other bond WBO distributions.
 There is a clear structure in this correlation plot. The square formed by bonds from atoms 24-29 shows that the alternating
 bonds in the aromatic ring (25-29) are strongly anti-correlated with each other. This trend is different in the ring formed by atoms 13-18
@@ -402,7 +403,7 @@ the more the electronic population overlap around that bond changes with remote 
 
 Not all bonds are equally sensitive to such changes. This is shown by how different the sensitivity score is for
 different bonds in the same molecule in figure {@fig:validation_set}. The general trend observed is that conjugated bonds,
-and bonds including open valence atoms such as N, O, and S, are more sensitive to peripheral cuts. Molecules 10-12 (fig{@fig:validation_set}) also
+and bonds including atoms with lone pairs such as N, O, and S, are more sensitive to peripheral cuts. Molecules 10-12 (fig{@fig:validation_set}) also
 show which chemical moiety the bond is sensitive to, indicated by circles around the atoms which are colored with the corresponding bond's sensitivity score. In molecule 10,
 the WBO distribution of the amide bond shifts significantly if the positively charged nitrogen is remove regardless if the rest of the molecule is intact (data not shown).
 In molecule 11, the removal of the phosphate group shifts the distribution of the red bond. In molecule 12, both the amide and ester bond are sensitive to the same
