--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -266,22 +266,22 @@ fragment's WBO is within the threshold of the parent WBO.
 
 | Chemical group | SMARTS pattern |
 |---|---|
-| azo |`'[NX3][N]='` |
-| nitric oxide | `'[N]-[O]'` |
-| amide |  `'[#7][#6](=[#8])'`, `[#7][#6](-[O-])`|
-| urea | `'[NX3][CX3](=[OX1])[NX3]'` |
-| aldehyde | `'[CX3H1](=O)[#6]'` |
-| sulfoxide | `[#16X3]=[OX1]`, `'[#16X3+][OX1-]'`|
-| sulfonyl | `'[#16X4](=[OX1])=([OX1])'` |
-| sulfinic acid | `'[#16X3](=[OX1])[OX2H,OX1H0-]'` |
-| sulfinamide | `'[#16X4](=[OX1])=([OX1])([NX3R0])'` |
-| sulfonic acid | `'[#16X4](=[OX1])(=[OX1])[OX2H,OX1H0-]'` |
-| phosphine oxide | `'[PX4](=[OX1])([#6])([#6])([#6])'` |
-| phosphonate | `'P(=[OX1])([OX2H,OX1-])([OX2H,OX1-])'` |
-| phosphate | `'[PX4](=[OX1])([#8])([#8])([#8])'` |
-| carboxylic acid | ` '[CX3](=O)[OX1H0-,OX2H1]'` |
-| nitro | `'([NX3+](=O)[O-])'`, `'([NX3](=O)=O)'` |
-| ester | `'[CX3](=O)[OX2H0]'` |
+| azo |`[NX3][N]=` |
+| nitric oxide | `[N]-[O]` |
+| amide |  `[#7][#6](=[#8])`, `[#7][#6](-[O-])`|
+| urea | `[NX3][CX3](=[OX1])[NX3]` |
+| aldehyde | `[CX3H1](=O)[#6]` |
+| sulfoxide | `[#16X3]=[OX1]`, `[#16X3+][OX1-]`|
+| sulfonyl | `[#16X4](=[OX1])=([OX1])` |
+| sulfinic acid | `[#16X3](=[OX1])[OX2H,OX1H0-]` |
+| sulfinamide | `[#16X4](=[OX1])=([OX1])([NX3R0])` |
+| sulfonic acid | `[#16X4](=[OX1])(=[OX1])[OX2H,OX1H0-]` |
+| phosphine oxide | `[PX4](=[OX1])([#6])([#6])([#6])` |
+| phosphonate | `P(=[OX1])([OX2H,OX1-])([OX2H,OX1-])` |
+| phosphate | `[PX4](=[OX1])([#8])([#8])([#8])` |
+| carboxylic acid | `[CX3](=O)[OX1H0-,OX2H1]` |
+| nitro | `([NX3+](=O)[O-])`, `([NX3](=O)=O)` |
+| ester | `[CX3](=O)[OX2H0]` |
 
 Table: Functional groups that are not fragmented. This list is not comprehensive and users can add their own functional groups they
 do not want to fragment {#tbl:fgroups}
