added small edits

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -283,7 +283,8 @@ fragment's WBO is within the threshold of the parent WBO.
 | nitro | `([NX3+](=O)[O-])`, `([NX3](=O)=O)` |
 | ester | `[CX3](=O)[OX2H0]` |
 
-Table: Functional groups that are not fragmented. This list is not comprehensive and users can add their own functional groups they
+Table: Functional groups that are not fragmented. This list is not comprehensive as it only includes functional groups that were
+present in the validation set. Users can add their own functional groups they
 do not want to fragment {#tbl:fgroups}
 
 [*(Add discussion on the changes I made to the Pfizer scheme for our minimal fragment before we start building out and why. Add SI figure justifying it)*]{.banner .lightyellow}
