--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -1,4 +1,4 @@
-## Introduction
+# Introduction
 
 Small molecules molecular mechancis (MM) force fields are essential to the design of small molecules for chemical 
 biology and drug discovery, as well as the use of molecular simulation to understand the
