--- a/content/05.discussion.md
+++ b/content/05.discussion.md
@@ -1,6 +1,6 @@
-## Discussion
+# Discussion
 
-### Combinatorial fragmentation benchmark set contains rich, chemical information that can be useful for other applications
+## Combinatorial fragmentation benchmark set contains rich, chemical information that can be useful for other applications
 
 The validation set used to benchmark our fragmentation scheme, and determine the disruption threshold to use, was specifically
 selected to validate a fragmentation scheme for QC torsion scan so we wanted molecules that are challenging to fragment.
@@ -25,7 +25,7 @@ and shifts in distributions also seem to detect pKa shifts, WBOs may be useful i
 We are sharing the dataset as a benchmark set for future fragmentation schemes. It is also straight forward to generate such data for molecules
 that are not in the set by following the directions given in the detailed methods.
 
-### Bond orders can be used to fit force field parameters
+## Bond orders can be used to fit force field parameters
 
 WBO is one form of quantum mechanical electron density based bond order calculations, among many other definitions of bond orders (Pauling [@doi:10.1021/ja01315a105],
 Coulson [@doi:10.1098/rspa.1939.0006], Mulliken [@doi:10.1063/1.1740588]
@@ -49,7 +49,7 @@ many expensive QC torsion scans, specifically for bespoke parameter fitting for 
 In addition, the ELF10 WBO can potentially be useful to determine if a bond is rotatable rather than relying on cheminformatics definitions.
 This can allow us to avoid running expensive, hard to converge, QC torsion scans for bonds that have very high torsion energy barriers. Instead,
 
-### Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
+## Relative changes in WBO is not enough to capture all characteristics of QM torsion scans
 
 The WBO is a measure of electron population overlap between atoms in a bond, so its relative changes is a good indication of
 conjugation and therefor a surrogate for torsion barrier heights (fig @fig:subsituted_phenyls, E). However, as we have shown in
@@ -92,7 +92,7 @@ or if their relative barrier heights are not in the same order as their ELF10 WB
 interactions beyond the 1-4 atoms. However, if changes in QC torsion scans of the same torsion types are accompanied with the same profile changes in
 the corresponding WBO scan, then the profile change is inherent to the electron population overlap of the bond and might need a different torsion type.
 
-### Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
+## Using Bond orders when fragmenting molecules captures long range effects that simple rules do not
 
 Relative changes in bond orders between the fragments and their parent molecules, are a good indication of disruption of electron density
 around a central bond. QC torsion scans capture both steric and conjugation effects so torsion force field parameters should capture
