--- a/content/06.detailed_method.md
+++ b/content/06.detailed_method.md
@@ -1,4 +1,4 @@
-## Detailed method
+# Detailed method
 
 * How the subsituted phenyl set was generated
 * QCArchive datasets, how they were generated and how to access them
