--- a/content/07.conclusion.md
+++ b/content/07.conclusion.md
@@ -1,4 +1,4 @@
-## Conclusion
+# Conclusion
 
 We have shown that the ELF10 WBO estimate is a simple, yet informative quantity about the extent of binding between two connecting atoms,
 thus descriptive of a bond's chemical environment, its level of conjugation, and resistance to rotation. We can use
