added John's edits' ' '

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,17 +1,19 @@
 ## Abstract {.page_break_before}
 
-Accurate small molecule molecular mechanics force fields are essential for predicting protein-ligand binding 
+Accurate molecular mechanics force fields for small moelcules are essential for predicting protein-ligand binding
 affinities in drug discovery and understanding the biophysics of biomolecular systems. The accuracy of torsion 
 parameters is important for determining the conformational distribution of molecules, and can have a large effect 
 on computed properties like binding affinities. Torsion parameters are usually fit to computationally costly 
 quantum chemical (QC) torsion scans that scale poorly with molecule size. To reduce computational cost and avoid 
 the complications of distant intramolecular interactions, molecules are generally fragmented into smaller entities 
 to carry out QC torsion scans. Poor fragmentation schemes, however, have the potential to significantly disrupt the 
-electronic properties of the region around the torsion, leading to poor representation of the real chemical environment. 
-Here, we show that a rapidly computing quantity, the fractional Wiberg bond order (WBO), is sensitive to the chemical 
+electronic properties of the region around the torsion, leading to poor representation of the real chemical environment
+and the resulting torsion energy profile.
+Here, we show that a rapidly computable quantity, the fractional Wiberg bond order (WBO), is sensitive to the chemical
 environment of bonds, and can be used as a useful surrogate to assess the robustness of fragmentation schemes and identify 
 conjugated bond sets. We use this concept to construct a validation set consisting of combinatorial fragmentations of 
-druglike organic molecules (and their corresponding WBO distributions) that can be used to evaluate fragmentation schemes. 
+druglike organic molecules (and their corresponding WBO distributions derived from accessible conformations) that can be used to evaluate fragmentation schemes.
 To illustrate the utility of the WBO in assessing fragmentation schemes that preserve the chemical environment, we propose 
-a new fragmentation scheme that uses WBO to maximize the chemical equivalency of the fragment and the substructure in the 
+a new fragmentation scheme that uses rapidly-computable AM1 WBOs, available essentially for free as part of an AM1-BCC partial charge
+assignment process, to maximize the chemical equivalency of the fragment and the substructure in the
 larger molecule.
