fixed math and figure reference

--- a/content/02.introduction.md
+++ b/content/02.introduction.md
@@ -49,8 +49,8 @@ to the computational cost. We found (SI Figure @fig:opts_per_td) that on average
 drive to converge. We also found that roughly 20 gradient evaluations are needed for an optimization to to converge for the
 molecules we optimized (SI Figure @fig:grads_per_opt). Figure @fig:b3lyp_scaling, B shows a smoothed histogram of the distribution of
 the number of heavy atoms in FDA approved small molecules taken from DrugBank [@doi:10.1093/nar/gkx1037]. For an average
-druglike molecule of 25 heavy atoms, we can estimate the cost of a 1D torsion scan to be $60 * 20 * 0.26 * 25^{2.6} ~ 1,000,000$ CPU seconds.
-Reducing the size of the molecule to 15 heavy atoms will reduce the cost the torsion scan by an order of magnitude ($60 * 20 * 0.26 * 15^{2.6} ~ 300,000$ CPU seconds)
+druglike molecule of 25 heavy atoms, we can estimate the cost of a 1D torsion scan to be $60 * 20 * 0.26 * 25^{2.6} \approx 1,000,000$ CPU seconds.
+Reducing the size of the molecule to 15 heavy atoms will reduce the cost the torsion scan by an order of magnitude ($60 * 20 * 0.26 * 15^{2.6} \approx 300,000$ CPU seconds)
 
 2. **Intramolecular interactions complicate torsion drives and torsion parameter fitting**
 In larger molecules, there is a greater potential for the torsion atoms to interact with other degrees of freedom and
