--- a/content/99.si.md
+++ b/content/99.si.md
@@ -5,7 +5,7 @@ CPU time (wall time * nthreads) for one gradient evaluation vs. heavy atoms in m
 are Intel(R) Xeon(R)](images/SI_Intel_scaling_4.svg){#fig:intel_scaling}
 
 ![**QC gradient evaluations scale similarly on various processor**
-Same as Figure @fig:intel_scaling but on AMD processors](images/SI_AMD_scaling_3.svg){#fig:amd_sclaing}
+Same as Figure @fig:intel_scaling but on AMD processors](images/SI_AMD_scaling_3.svg){#fig:amd_scaling}
 
 ![**Distributions of number of gradient evaluations per optimizations for different size molecules**
 The number of gradient evaluations per optimization depends on many factors such as initialization and tolerance, but there
