updated figure 2, added SI and minor edits

--- a/content/04.results-and-discussion.md
+++ b/content/04.results-and-discussion.md
@@ -148,11 +148,11 @@ to bonds that include sulfur and phosphorous which are longer, weaker bonds. **[
 are not in rings. The peaks at one, two and three correspond to single, double and triple bonds. The pink distribution include bonds that are in rings.
 The peak at one corresponds to single bonds and the density between one and 1.5 are aromatics. **[C]** The blue distribution includes bonds that have
 either one or two nitrogen. Many of these bonds are conjugated as demonstrated by the density around 1.5. The density at three corresponds to
-nitriles. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2.svg){#fig:wbo_dists}
+nitriles. The pink distribution include bonds that have oxygens. The peak at two corresponds to carbonyls.](images/figure-2_4.svg){#fig:wbo_dists}
 
 This method can also be applied to derive WBOs that are insensitive to conformers. To check how well ELF10 estimated $W_{AB}$ recapitulates the multiplicity of bonds,
 we calculated $W_{AB}$ from ELF10 AM1 calculations
-for all bonds in a set of molecules shown in `[hold for SI]`{.red}. The distribution in figure @fig:wbo_dists corresponds
+for all bonds in a set of molecules shown in SI Figure @fig:wbo_dist_mols. The distribution in figure @fig:wbo_dists corresponds
 closely with bond multiplicity. The density at ~ 0.7 correspond bonds involving sulfur and phosphorous since these are weaker and longer bonds. The peak at 1.0
 corresponds to C-H and C-C bonds, the peak close to 1.5 corresponds to bonds in aromatic rings, the peak close to 2.0 corresponds
 to double bonds, and finally the triple bonds form the last peak. Figures @fig:wbo_dists B and D seperate out different kinds of bonds
