--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -6,12 +6,12 @@ parameters is important for determining the conformational distribution of molec
 on computed properties like binding affinities. Torsion parameters are usually fit to computationally costly 
 quantum chemical (QC) torsion scans that scale poorly with molecule size. To reduce computational cost and avoid 
 the complications of distant intramolecular interactions, molecules are generally fragmented into smaller entities 
-to carry out QC torsion scans. Poor fragmentation schemes, however, have the potential to significantly disrupt the 
+to carry out QC torsion scans. Poor fragmentation schemes, however, have the potential to significantly disrupt
 electronic properties of the region around the torsion, leading to poor representation of the real chemical environment
 and the resulting torsion energy profile.
 Here, we show that a rapidly computable quantity, the fractional Wiberg bond order (WBO), is sensitive to the chemical
 environment of bonds, and can be used as a useful surrogate to assess the robustness of fragmentation schemes and identify 
-conjugated bond sets. We use this concept to construct a validation set consisting of combinatorial fragmentations of 
+conjugated bond sets. We use this concept to construct a validation set consisting of exhaustive fragmentations of
 druglike organic molecules (and their corresponding WBO distributions derived from accessible conformations) that can be used to evaluate fragmentation schemes.
 To illustrate the utility of the WBO in assessing fragmentation schemes that preserve the chemical environment, we propose 
 a new fragmentation scheme that uses rapidly-computable AM1 WBOs, available essentially for free as part of an AM1-BCC partial charge
